--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html lang="">
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Warframe Event Alerts</title>
-	<meta name="robots" content="noindex">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
